--- a/GameServer/.classpath
+++ b/GameServer/.classpath
@@ -5,5 +5,13 @@
 	<classpathentry kind="lib" path="libs/smartsocket-2.0.0.jar"/>
 	<classpathentry kind="lib" path="libs/smartsocket-2.0.0-sources.jar"/>
 	<classpathentry kind="lib" path="libs/smartsocket-2.0.0-javadoc.jar"/>
+	<classpathentry kind="lib" path="libs/guice/aopalliance.jar"/>
+	<classpathentry kind="lib" path="libs/guice/guice-4.0-beta.jar"/>
+	<classpathentry kind="lib" path="libs/guice/guice-assistedinject-4.0-beta.jar"/>
+	<classpathentry kind="lib" path="libs/guice/guice-jmx-4.0-beta.jar"/>
+	<classpathentry kind="lib" path="libs/guice/guice-jndi-4.0-beta.jar"/>
+	<classpathentry kind="lib" path="libs/guice/guice-multibindings-4.0-beta.jar"/>
+	<classpathentry kind="lib" path="libs/guice/guice-throwingproviders-4.0-beta.jar"/>
+	<classpathentry kind="lib" path="libs/guice/javax.inject.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
